# whisp

./: .gitignore  CHANGELOG.md  CHANGELOG_OPTIMISATIONS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NUMBA_OPTIMIZATION.md  README.md  __init__.py  accessibility_commands.py  analysis_commands.py  api_keys.json.example  api_security.py  audio_backend_manager.py  audio_optimization.py  base_command_module.py  browser_commands.py  bug_tracker.py  check_stt_modules.py  command_aliases.py  command_optimization.py  command_processor.py  command_processor_v2.py  command_router.py  config.example.env  config.py  cuda_path_fixer.py  database_commands.py  database_manager.py  dependency_manager.py  dev_environment_commands.py  dictation_mode.py  environment_config.py  error_handler.py  exit_commands.py  file_commands.py  finetune_api.py  fix_nemo_windows.py  git_commands.py  import_utils.py  (+38 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: commands.md  configuration.md  installation.md  utilisation.md
scripts/: setup_dev.ps1  setup_dev.sh
static/css/: bugs.css  style.css
static/js/: accessibility-checker.js  aria-validator.js  bugs.js  finetune-batch.js  finetune-v2.js  script.js  stt_settings.js  tts-models.js
templates/: aliases.html  bugs.html  config.html  finetune.html  finetune_v2.html  index.html  presentation.html  roadmap.html
templates/components/: footer.html  navigation.html
